feat(http): propagate request timeouts to repositories
