# docs/swagger.json
@@ -45,6 +45,12 @@
                         "schema": {
                             "$ref": "#/definitions/http.errorResponseDTO"
                         }
+                    },
+                    "504": {
+                        "description": "Gateway Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponseDTO"
+                        }
                     }
                 }
             }
@@ -90,6 +96,12 @@
                         "schema": {
                             "$ref": "#/definitions/http.errorResponseDTO"
                         }
+                    },
+                    "504": {
+                        "description": "Gateway Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponseDTO"
+                        }
                     }
                 }
             },
@@ -131,6 +143,12 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponseDTO"
+                        }
+                    },
+                    "504": {
+                        "description": "Gateway Timeout",
                         "schema": {
                             "$ref": "#/definitions/http.errorResponseDTO"
                         }
@@ -192,6 +210,12 @@
                         "schema": {
                             "$ref": "#/definitions/http.errorResponseDTO"
                         }
+                    },
+                    "504": {
+                        "description": "Gateway Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponseDTO"
+                        }
                     }
                 }
             }
@@ -236,6 +260,12 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponseDTO"
+                        }
+                    },
+                    "504": {
+                        "description": "Gateway Timeout",
                         "schema": {
                             "$ref": "#/definitions/http.errorResponseDTO"
                         }
@@ -293,6 +323,12 @@
                         "schema": {
                             "$ref": "#/definitions/http.errorResponseDTO"
                         }
+                    },
+                    "504": {
+                        "description": "Gateway Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponseDTO"
+                        }
                     }
                 }
             },
@@ -332,6 +368,12 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponseDTO"
+                        }
+                    },
+                    "504": {
+                        "description": "Gateway Timeout",
                         "schema": {
                             "$ref": "#/definitions/http.errorResponseDTO"
                         }
